add ClasspathHandler and tests